--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "WNRS GR",
+  "name": "We're Not Really Strangers - Greek Edition",
   "icons": [
     {
       "src": "favicon.ico",
